--- a/index.css
+++ b/index.css
@@ -29,9 +29,17 @@
     margin: auto;
 }
 .form_basico > label {
-    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 23px;
+    line-height: 120%;
+    
 }
 .form_basico > input {
+    
     
 }
 .estilo_botao {
